# grantami-bomanalytics

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.rst  builders.py  changelog.md  connection.py  ignore_words.txt  index.html  indicators.py  item_definitions.py  item_factories.py  item_references.py  item_results.py  main.py  mypy.ini  pyproject.toml  pytest.ini  query_managers.py  query_results.py  requirements.txt  requirements_docs.txt  requirements_style.txt  requirements_test.txt  robots.txt  setup.cfg  setup.py  sitemap.xml  tox.ini  versions.json
.github/: dependabot.yml  labeler.yml  release.yml
.github/workflows/: check-concurrent-workflows.yml  ci_cd.yml  ci_cd_dependabot.yml  ci_cd_full.yml  ci_cd_reusable.yml  dependabot_approve.yml  integration_checks.yml  integration_tests.yml  label.yml  local_checks.yml  release.yml  security_checks.yml  server_checks.yml  static_and_local_checks.yml
cicd/: 1_get_cleaned_db_entries.py  2_prepare_rs_db.py  3_modify_custom_rs_db.py  4_add_cross_database_links.py  4_create_foreign_database.py  5_link_mi_training.py  _config.py  _connection.py  _utils.py  check_server.py  connection.py  get_cleaned_db_entries.py  modify_custom_rs_db.py  prepare_rs_db.py
doc/: .vale.ini  Makefile  class_documenter.py  make.bat
doc/changelog.d/: 1000.miscellaneous.md  1001.documentation.md  1002.maintenance.md  1007.documentation.md  1009.miscellaneous.md  1011.documentation.md  1062.fixed.md  510.changed.md  511.dependencies.md  512.dependencies.md  513.miscellaneous.md  518.changed.md  519.changed.md  520.dependencies.md  521.dependencies.md  522.dependencies.md  523.dependencies.md  524.dependencies.md  527.dependencies.md  529.changed.md  546.fixed.md  549.changed.md  551.changed.md  587.changed.md  602.maintenance.md  607.documentation.md  616.documentation.md  617.maintenance.md  619.documentation.md  620.documentation.md  621.documentation.md  622.maintenance.md  626.maintenance.md  630.documentation.md  635.dependencies.md  643.documentation.md  646.dependencies.md  649.documentation.md  650.dependencies.md  651.maintenance.md  (+115 more)
doc/source/: _replacements.rst  changelog.rst  conf.py  contributing.rst  index.rst  latexindex.rst
doc/styles/: .gitignore
examples/: 0_Basic_usage.py  0_Getting_started.py  1_Database-specific_configuration.py  index.rst
examples-dummy/examples/: 0_Test_module_import.py  index.rst
examples/1. Impacted Substances/: 1-1. Impacted Substances of materials.py  1-2. Impacted Substances of Parts.py  1-2. Parts Impacted Substances.py  index.rst
examples/1. Impacted Substances Queries/: 1-1. Materials Impacted Substances.py  1-1. Materials impacted substances.py  1-2. Parts Impacted Substances.py  1-2. Parts impacted substances.py  index.rst
examples/1_Impacted_Substances_Queries/: 1-1_Materials_impacted_substances.py  1-2_Parts_impacted_substances.py  index.rst
examples/2. Compliance Queries/: 2-1. Substance compliance.py  2-2. Material compliance.py  2-3. Part compliance.py  index.rst
examples/2. Compliance queries/: 2-1. Substance compliance.py  2-2. Material compliance.py  2-3. Part compliance.py  index.rst
examples/2_Compliance_Queries/: 2-1_Substance_compliance.py  2-2_Material_compliance.py  2-3_Part_compliance.py  index.rst
examples/2_Impacted_Substances_Queries/: 2-1_Materials_impacted_substances.py  2-3_BoM_impacted_substances.py  2-4_External_database_materials.py  index.rst
examples/3. Advanced Topics/: 3-1. Working with XML BoMs.py  3-2 Dealing with external data sources.py  3-2. Dealing with external data sources.py  3-3. Database-specific configuration.py  3-4. Writing compliance results to a dataframe.py  index.rst
examples/3_Advanced_Topics/: 3-1_Working_with_XML_BoMs.py  3-2_Creating_an_XML_BoM.py  3-2_Dealing_with_external_data_sources.py  3-3_Database-specific_configuration.py  3-4_Database-specific_configuration.py  3-4_Writing_compliance_results_to_a_dataframe.py  3-5_Creating_a_Bill_of_Materials.py  3-5_Using_the_BoM_builder.py  3-6_Creating_a_Bill_of_Materials.py  index.rst
examples/3_Compliance_Queries/: 3-1_Substance_compliance.py  3-2_Material_compliance.py  3-4_BoM_compliance.py  index.rst
examples/4_Sustainability/: 4-1_BoM_Sustainability_summary.py  4-1_Sustainability.py  4-2_BoM_Sustainability.py  4-2_BoM_Sustainability_summary_phase_summary.py  4-3_BoM_Sustainability_summary_transport.py  4-4_BoM_Sustainability_summary_material.py  4-4_BoM_Sustainability_summary_material_and_processing.py  4-5_BoM_Sustainability_summary_hierarchical_plots.py  4-5_BoM_Sustainability_summary_processes.py  4-6_BoM_Sustainability_summary_hierarchical_plots.py  index.rst
examples/5_Sustainability_summary/: 5-1_Summary_and_messages.py  5-2_Transports.py  5-3_Materials.py  5-4_Processes.py  5-5_Hierarchical_plots.py  index.rst
examples/6_Bills_of_Materials/: 6-2_Creating_an_XML_BoM_from_JSON.py  index.rst
examples/6_Bills_of_materials/: 6-1_Creating_an_XML_BoM.py  index.rst
examples/6_BoMs/: 6-2_Creating_an_XML_BoM_from_JSON.py  6-3_Creating_an_XML_BoM_from_CSV.py  index.rst
examples/supporting-files/: BillOfMaterialsEco.xsd  invalid-bom.xml
tests/: bom.xml  common.py  conftest.py  examples.py  examples_expectations.py  test_allowed_types.py  test_argument_managers.py  test_batching.py  test_bom.py  test_bom_builders.py  test_bom_handler.py  test_bom_indicators.py  test_bom_item_definitions.py  test_connection.py  test_custom_config.py  test_end_to_end_tests.py  test_examples.py  test_integration_tests.py  test_item_results.py  test_materials.py  test_parts.py  test_specifications.py  test_substance_merger.py  test_substances.py  test_type_assertions.py  test_unit_tests.py
tests/inputs/: __init__.py  bom-1711-as-2301.xml  bom-2301-complex.xml  bom-2301.xml  bom-complex.xml  bom.xml  examples.py  medium-test-bom-2412.xml  medium-test-bom.xml  prepare_boms.py  prepare_payloads.py  sustainability-bom-2412.xml
tests/test_end_to_end/: test_bom.py  (+4 more)
version/: index.html
(+1301 files in other folders)
