[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ansys-grantami-bomanalytics"
description = "Perform compliance and sustainability analysis on materials data stored in Granta MI."
version = "2.4.0rc0"
license = "MIT"
authors = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
maintainers = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
repository = "https://github.com/ansys/grantami-bomanalytics"
documentation = "https://bomanalytics.grantami.docs.pyansys.com"
readme = "README.rst"
keywords = [
  "Ansys",
  "Granta MI",
  "Bill of Materials",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
packages = [
  { include = "ansys", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.0"

# Packages for core library
ansys-openapi-common = "^2.0.0"
ansys-grantami-bomanalytics-openapi = ">=5.0.0,<6.0"
xmlschema = ">=3.0.1,<5.0"
defusedxml = "^0.7"

# Packages for the examples extra
jupyterlab = { version = ">=3,<5", optional = true }
lxml = { version = ">=4,<7", optional = true }
pandas = { version = "^2.0", optional = true }
tabulate = { version = "^0.9", optional = true }
plotly = { version = ">=5.17,<7.0", optional = true }
ipywidgets = { version = "^8.1.1", optional = true }

[tool.poetry.group.dev.dependencies]
# Common packages for test and examples
jupyterlab = ">=3,<5"
lxml = ">=4,<7"
pandas = "^2.0"
tabulate = "^0.9"
pytest = ">=7,<10"
pytest-cov = ">=4,<8"
requests-mock = "^1"
ipython = "^8"
plotly = ">=5.17,<7.0"
ipywidgets = "^8.1.1"
mypy = "^1.9.0"
pyyaml = "^6"
types-defusedxml = "^0.7"
kaleido = "^1.0"
choreographer = "^1.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
# Doc packages
ansys-sphinx-theme = ">=0.12,<1.7"
numpydoc = "^1.6.0"
sphinx = ">=7.1,<9.0"
sphinx-notfound-page = "^1.0.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = ">=0.5,<0.7"
jupytext =  "^1.15.2"
nbsphinx = "^0.9.3"

[tool.poetry.extras]

examples = [
  "lxml",
  "tabulate",
  "pandas",
  "jupyterlab",
  "plotly",
  "ipywidgets",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
files = "src"
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true

[tool.pytest.ini_options]
testpaths = "./tests"
markers = [
    """integration(*, mi_versions: None | list[tuple[int, int]] = None): The test requires a real database.
    The optional keyword-only argument \"mi_versions\" represents a MAJOR, MINOR version of Granta MI. The test will \
    be skipped if run against an incompatible Granta MI version. Note that this package tests functionality in the \
    RS & Sustainability reports package, which is compatible with multiple Granta MI versions. However, when testing \
    this package, the same version of the reports package and Granta MI are always used together.
    Deselect all integration tests with 'pytest -m \"not integration\"'""",
]
filterwarnings = [
	"error",
]

[tool.black]
line-length = 120

[tool.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
skip_gitignore = true
skip = [".ipython", "cicd", "examples", "examples-dummy"]
src_paths = ["src", "tests"]

[tool.towncrier]
package = "ansys.grantami.bomanalytics"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/grantami-bomanalytics/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/grantami-bomanalytics/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
