[metadata]
name = ansys-grantami-bomanalytics
version = attr: ansys.grantami.bomanalytics.__version__
description = Granta MI BoM Analytics
long_description = file: README.rst, LICENSE
long_description_content_type='text/x-rst',
url = https://github.com/pyansys/ansys-grantami-bomanalytics/
license = MIT
author = ANSYS, Inc.
maintainer = PyAnsys developers
maintainer_email = pyansys.support@ansys.com
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topid :: Scientific/Engineering :: Information Analysis
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    ansys-openapi-common
    ansys-grantami-bomanalytics-openapi
tests_require =
    ansys-openapi-common
    ansys-grantami-bomanalytics-openapi
    pytest
    pytest-cov
    requests-mock
    dataclasses; python_version < '3.7'
packages.find.exclude =
    .tests
python_requires= >=3.6

[options.packages.find]
where = src



