[metadata]
name = ansys-grantami-bomanalytics
version = attr: ansys.grantami.bomanalytics.__version__
description = Granta MI BoM Analytics
long_description = file: README.rst, LICENSE
long_description_content_type='text/x-rst',
url = https://github.com/pyansys/ansys-grantami-bomanalytics/
license = MIT
author = ANSYS, Inc.
maintainer = PyAnsys developers
maintainer_email = pyansys.support@ansys.com
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topid :: Scientific/Engineering :: Information Analysis
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    ansys-openapi-common
    ansys-grantami-bomanalytics-openapi
packages.find.exclude =
    .tests
python_requires = >=3.6

[options.packages.find]
where = src

[codespell]
ignore-words = ignore_words.txt
skip = "*.pyc,*.xml,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./docs/build/*,./docs/images/*,./dist/*,*~,.hypothesis*,./docs/source/examples/*,*cover,*.dat,*.mac,\\#*,PKG-INFO,*.mypy_cache/*,*.xml,*.aedt,*.svg"
